tests/invalid/runtime/json_decode_invalid.pts
import JSON;

function main() : void {
    JSON.decode("{");
}
